[package]
name = "redis_ts"
version = "0.5.2"
authors = ["protom <office@protom.eu>"]
keywords = ["redis", "database"]
description = "API for Redis time series types."
homepage = "https://github.com/tompro/redis_ts"
repository = "https://github.com/tompro/redis_ts"
documentation = "https://docs.rs/redis_ts"
license = "BSD-3-Clause"
readme = "README.md"
edition = "2018"
exclude = ["docker"]

[dependencies]
redis = { version = "0.23.0", optional = true }

[features]
default = ['redis']
tokio-comp = ['redis/tokio-comp']
async-std-comp = ['redis/async-std-comp']

[dev-dependencies]
tokio = { version = "1", features = ["rt"] }
futures = "0.3.5"
async-std = { version = "1.8.0", features = ["tokio1"] }

[[test]]
name = "test_async_std_commands"
required-features = ['async-std-comp']

[[test]]
name = "test_async_tokio_commands"
required-features = ['tokio-comp']

[package.metadata.docs.rs]
all-features = true
